// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Strike Strike 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Strike Strike 2`] = `
Array [
  1,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  1,
]
`;
